--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,14 +8,25 @@ packages = [{include = "sarkinkofa"}]
 include = ["sarkinkofa/resources/**"]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.13"
 ultralytics = "^8.0.148"
 opencv-python = "^4.8.0.74"
-openpyxl = "^3.1.2"
 pillow = "9.5.0"
-ipykernel = "^6.25.1"
-watchdog = "^3.0.0"
+numpy = "^1.26.1"
 
+
+[tool.poetry.group.dev.dependencies]
+black = "^23.10.0"
+pytest = "^7.4.2"
+flake8 = "^6.1.0"
+ipykernel = "^6.25.2"
+
+
+[tool.poetry.group.demo.dependencies]
+watchdog = "^3.0.0"
+pandas = "^2.1.1"
+openpyxl = "^3.1.2"
+numpy = "^1.26.1"
 
 [build-system]
 requires = ["poetry-core"]
