--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,18 @@ readme = "README.md"
 packages = [{include = "sarkinkofa"}]
 include = ["sarkinkofa/resources/**"]
 
+
+[tool.poetry.scripts]
+sarkinkofa-fs = "sarkinkofa.sarkinkofa_fs:app"
+
+
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
 ultralytics = "^8.0.148"
 opencv-python = "^4.8.0.74"
 pillow = "9.5.0"
 numpy = "^1.26.1"
+typer = {extras = ["all"], version = "^0.9.0"}
 
 
 [tool.poetry.group.dev.dependencies]
