--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "sarkin-kofa"
+name = "sarkinkofa"
 version = "0.1.0"
 description = ""
 authors = ["Abdulazeez Jimoh <abdulazeezojimoh@gmail.com>"]
@@ -9,26 +9,80 @@ include = ["sarkinkofa/resources/**"]
 
 
 [tool.poetry.scripts]
-sarkinkofa-fs = "sarkinkofa.sarkinkofa_fs:app"
+sarkinkofa = "sarkinkofa.__main__:app"
 
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
-ultralytics = "^8.0.148"
-opencv-python = "^4.8.0.74"
 pillow = "10.0.1"
 numpy = "^1.26.1"
 typer = {extras = ["all"], version = "^0.9.0"}
 watchdog = "^3.0.0"
-
+pydantic = "^2.5.3"
+onnx = "^1.15.0"
+onnxruntime = "^1.17.0"
+pandas = "^2.2.0"
+opencv-python = "^4.9.0.80"
+openpyxl = "^3.1.2"
+tortoise-orm = {extras = ["aiosqlite"], version = "^0.20.0"}
+sqlalchemy = "^2.0.27"
 
 [tool.poetry.group.dev.dependencies]
-black = "^23.10.0"
-pytest = "^7.4.2"
-flake8 = "^6.1.0"
-ipykernel = "^6.25.2"
+commitizen = "^3.12.0"
+ipykernel = "^6.27.1"
+pre-commit = "^3.5.0"
+pytest = "^7.4.3"
+ruff = "^0.2.2"
 
+[tool.commitizen]
+name = "cz_conventional_commits"
+tag_format = "v$version"
+version_scheme = "semver"
+version_provider = "poetry"
+update_changelog_on_bump = true
+major_version_zero = true
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff]
+exclude = [
+    ".bzr",
+    ".direnv",
+    ".eggs",
+    ".git",
+    ".git-rewrite",
+    ".hg",
+    ".mypy_cache",
+    ".nox",
+    ".pants.d",
+    ".pytype",
+    ".ruff_cache",
+    ".svn",
+    ".tox",
+    ".venv",
+    "__pypackages__",
+    "_build",
+    "buck-out",
+    "build",
+    "dist",
+    "node_modules",
+    "venv",
+]
+line-length = 100
+indent-width = 4
+target-version = "py310"
+
+[tool.ruff.lint]
+select = ["E4", "E7", "E9", "F"]
+ignore = []
+fixable = ["ALL"]
+unfixable = []
+dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
