--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,14 +17,9 @@ python = ">=3.10,<3.13"
 pillow = "^10.2.0"
 numpy = "^1.26.1"
 typer = {extras = ["all"], version = "^0.9.0"}
-watchdog = "^3.0.0"
 pydantic = "^2.5.3"
-onnx = "^1.15.0"
-onnxruntime = "^1.17.0"
-pandas = "^2.2.0"
+onnxruntime = "^1.17.1"
 opencv-python = "^4.9.0.80"
-openpyxl = "^3.1.2"
-sqlalchemy = "^2.0.27"
 
 [tool.poetry.group.dev.dependencies]
 commitizen = "^3.12.0"
@@ -32,6 +27,17 @@ ipykernel = "^6.27.1"
 pre-commit = "^3.5.0"
 pytest = "^7.4.3"
 ruff = "^0.2.2"
+
+
+[tool.poetry.group.demo.dependencies]
+sqlmodel = "^0.0.16"
+watchdog = "^4.0.0"
+
+
+[[tool.poetry.source]]
+name = "pytorch"
+url = "https://download.pytorch.org/whl/cu121"
+priority = "supplemental"
 
 [tool.commitizen]
 name = "cz_conventional_commits"
