--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,8 @@ pillow = "^10.2.0"
 numpy = "^1.26.1"
 typer = {extras = ["all"], version = "^0.9.0"}
 pydantic = "^2.5.3"
-onnxruntime = "^1.17.1"
 opencv-python = "^4.9.0.80"
+onnxruntime-gpu = {version = "^1.17.1", source = "onnx"}
 
 [tool.poetry.group.dev.dependencies]
 commitizen = "^3.12.0"
@@ -37,6 +37,12 @@ watchdog = "^4.0.0"
 [[tool.poetry.source]]
 name = "pytorch"
 url = "https://download.pytorch.org/whl/cu121"
+priority = "supplemental"
+
+
+[[tool.poetry.source]]
+name = "onnx"
+url = "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple/"
 priority = "supplemental"
 
 [tool.commitizen]
